k8s/prod-svc-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: coverity-assist-canary
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: coverity-assist-canary
  ports:
  - name: http
    port: 5004
    targetPort: ${PORT}
