k8s/stg-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coverity-assist-nginx
  namespace: ${NS}
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  ingressClassName: nginx
  tls:
  - hosts: [ ${HOST} ]
    secretName: coverity-assist-stg-tls
  rules:
  - host: ${HOST}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coverity-assist
            port:
              name: http
